<resources>
    <string name="app_name">e_queue</string>
    <string name="splash_screen_text">from</string>
    <string name="button_login">Войти</string>
    <string name="workspace">Окно:</string>
    <string name="operator">Оператор:</string>
    <string name="exit">Выход</string>
    <string name="amount_of_clients">Общее число клиентов в очереди:</string>
    <string name="status_client_is_not_called">Клиент не вызван</string>
    <string name="status_client_is_called">Приглашен клиент</string>
    <string name="status_work_with_client">Работа с клиентом</string>
    <string name="to_call_next_client">Вызвать следующего</string>
    <string name="to_call_next_client_again">Вызвать повторно</string>
    <string name="to_list_postponed_client">Просмотреть отложенных</string>
    <string name="to_no_client">Клиент не явился</string>
    <string name="to_start_work">Начать работу</string>
    <string name="to_redirect">Перенаправить</string>
    <string name="to_postpone">Отложить</string>
    <string name="to_finish_work">Завершить работу</string>
    <string name="next_client_number">A11</string>
    <string name="current_client_number">A10</string>
    <string name="current_client_service">Название услуги</string>
    <string name="settings">Настройки</string>
    <string name="settings_hh">Операции для работы с клиентами</string>
    <string name="settings_network">Настройки сети</string>
    <string name="one_button_mode">Режим одной кнопки</string>
    <string name="one_button_mode_explanation">Упрощенный режим работы</string>
    <string name="save">Сохранить</string>
    <string name="redirection_of_client">Перенаправить клиента</string>
    <string name="finish_work_with_client">Закончить работу с клиентом</string>
    <string name="postponing_of_client">Отложить клиента</string>
    <string name="with_return_of_client">С возвращением клиента</string>
    <string name="cancel">Отмена</string>
    <string name="to_postpone_a">Отложить на</string>
    <string name="minus">минут</string>
    <string name="only_for_me">Только для меня</string>
    <string name="check_connection">Проверка соединения с сервером</string>
    <string name="enter_ip">Введите IP-адрес сервера</string>
    <string name="ip_address_server_text">IP-адрес сервера</string>
    <string name="ip_address">192.168.0.145:8080</string>
    <string name="check_connection_button">Проверить соединение</string>
    <string name="error_ip">Проблемы с подключением к серверу</string>
    <string name="try_again">Попробовать снова</string>
    <string name="enter_new_ip">Ввести новый IP-адрес</string>
    <string name="dot">.</string>
    <string name="colon">:</string>
    <string name="no_connection">Нет соединения с сервером</string>
    <string name="ok">ОК</string>
    <string name="success_connection">Соединение с сервером установлено</string>
    <string name="amount_of_postponed_clients1">Общее число отложенных клиентов в очереди: %s</string>
    <string name="amount_of_postponed_clients2">в очереди:</string>
    <string name="to_call_client">Вызвать клиента</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Пароль…</string>
    <string name="choose_user">Выберите пользователя…</string>
    <string name="choose_user_snack_bar">Необходимо выбрать пользователя.</string>
    <string name="choose_results_snack_bar">Необходимо выбрать результат работы.</string>
    <string name="choose_client_snack_bar">Необходимо выбрать клиента.</string>
    <string name="choose_service_snack_bar">Необходимо выбрать услугу.</string>
    <string name="enter_password_snack_bar">Для входа необходимо ввести пароль.</string>
    <string name="wrong_password_snack_bar">Введен не верный пароль.</string>
    <string name="comments">Комментарий…</string>
    <string name="service_name">Название услуги</string>
    <string name="zero">0</string>
    <string name="five">5</string>
    <string name="server_no_connection">Соединение с сервером не установлено. \nПроверьте введенный IP-адрес и работу \nсервера.</string>
    <string name="change">Изменить</string>
    <string name="_254">254</string>
    <string name="_127">127</string>
    <string name="_1">1</string>
    <string name="_8080">8080</string>
    <string name="please_enter_all">Пожалуйста заполните все поля!</string>


</resources>