<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:attr="http://schemas.android.com/tools"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_settings"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50mdp"
        android:background="@drawable/bg_gradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/toolbar_settings_h"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_20mdp"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="@dimen/_16font_mdp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@id/toolbar_settings"
        app:layout_constraintEnd_toEndOf="@id/toolbar_settings"
        app:layout_constraintStart_toStartOf="@id/toolbar_settings"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ic_back"
        android:layout_width="@dimen/_30mdp"
        android:layout_height="@dimen/_15mdp"
        android:src="@drawable/ic_back"
        android:layout_marginTop="@dimen/_1mdp"
        android:layout_marginStart="@dimen/_10mdp"
        app:layout_constraintBottom_toBottomOf="@id/toolbar_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/toolbar_settings"
        attr:ignore="ContentDescription" />

    <TextView
        android:id="@+id/settings_text_hh"
        style="@style/roboto_regular_14"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_20mdp"
        android:layout_marginTop="@dimen/_20mdp"
        android:text="@string/settings_hh"
        android:textColor="@color/text_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_settings" />

    <TextView
        android:id="@+id/settings_text_postpone"
        style="@style/roboto_regular_14"
        android:layout_width="@dimen/_70mdp"
        android:layout_height="@dimen/_20mdp"
        android:text="@string/to_postpone"
        android:layout_marginTop="@dimen/_25mdp"
        android:layout_marginStart="@dimen/_35mdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_text_hh" />

    <ImageView
        android:id="@+id/line_horizontal_1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1mdp"
        android:layout_marginTop="@dimen/_15mdp"
        android:src="@drawable/ic_line_between_settings"
        android:layout_marginStart="@dimen/_35mdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_text_postpone"
        attr:ignore="ContentDescription" />

    <TextView
        android:id="@+id/settings_text_redirect"
        style="@style/roboto_regular_14"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_20mdp"
        android:layout_marginStart="@dimen/_35mdp"
        android:layout_marginTop="@dimen/_30mdp"
        android:text="@string/to_redirect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_text_postpone" />

    <ImageView
        android:id="@+id/line_horizontal_2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1mdp"
        android:src="@drawable/ic_line_between_settings"
        android:layout_marginTop="@dimen/_15mdp"
        android:layout_marginStart="@dimen/_35mdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_text_redirect"
        attr:ignore="ContentDescription" />

    <TextView
        android:id="@+id/settings_text_one_button_mode"
        style="@style/roboto_regular_14"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_20mdp"
        android:layout_marginStart="@dimen/_35mdp"
        android:layout_marginTop="@dimen/_30mdp"
        android:text="@string/one_button_mode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_text_redirect" />

    <TextView
        android:id="@+id/settings_text_one_button_mode_explanation"
        style="@style/roboto_regular_10_light"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_16mdp"
        android:layout_marginStart="@dimen/_35mdp"
        android:text="@string/one_button_mode_explanation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_text_one_button_mode" />

    <com.suke.widget.SwitchButton
        android:id="@+id/switch_postpone"
        android:layout_width="@dimen/_50mdp"
        android:layout_height="@dimen/_30mdp"
        android:layout_marginEnd="@dimen/_20mdp"
        android:layout_marginTop="@dimen/_10mdp"
        app:layout_constraintBottom_toTopOf="@+id/line_horizontal_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_text_hh" />

    <com.suke.widget.SwitchButton
        android:id="@+id/switch_redirect"
        android:layout_width="@dimen/_50mdp"
        android:layout_height="@dimen/_30mdp"
        android:layout_marginEnd="@dimen/_20mdp"
        app:layout_constraintBottom_toTopOf="@+id/line_horizontal_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/line_horizontal_1" />

    <com.suke.widget.SwitchButton
        android:id="@+id/switch_one_button_mode"
        android:layout_width="@dimen/_50mdp"
        android:layout_height="@dimen/_30mdp"
        android:layout_marginEnd="@dimen/_20mdp"
        app:layout_constraintBottom_toTopOf="@+id/line_horizontal_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/line_horizontal_2" />

    <ImageView
        android:id="@+id/line_horizontal_3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1mdp"
        android:src="@drawable/ic_line_between_settings"
        android:layout_marginTop="@dimen/_10mdp"
        android:layout_marginStart="@dimen/_35mdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_text_one_button_mode_explanation"
        attr:ignore="ContentDescription" />

    <TextView
        android:id="@+id/setting_network_text"
        style="@style/roboto_regular_14"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_20mdp"
        android:layout_marginTop="@dimen/_40mdp"
        android:text="@string/settings_network"
        android:textColor="@color/text_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_horizontal_3" />

    <TextView
        android:id="@+id/ip_address_text"
        style="@style/roboto_regular_14"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_20mdp"
        android:text="@string/ip_address_server_text"
        android:layout_marginTop="@dimen/_20mdp"
        android:layout_marginStart="@dimen/_35mdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setting_network_text" />

    <TextView
        android:id="@+id/ip_address"
        style="@style/roboto_regular_10_light"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_16mdp"
        android:layout_marginStart="@dimen/_35mdp"
        android:text="@string/ip_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ip_address_text" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="@dimen/_85mdp"
        android:layout_height="@dimen/_30mdp"
        android:text="@string/change"
        android:fontFamily="@font/roboto_medium"
        android:textAllCaps="false"
        android:textColor="@color/green_for_settings"
        android:textSize="@dimen/_12font_mdp"
        android:layout_marginTop="@dimen/_25mdp"
        android:layout_marginEnd="@dimen/_20mdp"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/change_button"
        app:layout_constraintTop_toBottomOf="@+id/setting_network_text" />

</androidx.constraintlayout.widget.ConstraintLayout>