<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50mdp"
        android:background="@drawable/bg_gradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/user_img"
        android:layout_width="@dimen/_36mdp"
        android:layout_height="@dimen/_36mdp"
        android:layout_marginStart="@dimen/_10mdp"
        android:layout_marginTop="@dimen/_8mdp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/ic_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/workspace"
        style="@style/toolbar_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_6mdp"
        android:layout_marginTop="@dimen/_10mdp"
        android:text="@string/workspace"
        app:layout_constraintStart_toEndOf="@id/user_img"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/workspace_number"
        style="@style/toolbar_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_6mdp"
        android:layout_marginTop="@dimen/_10mdp"
        app:layout_constraintStart_toEndOf="@id/workspace"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/operator"
        style="@style/toolbar_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_6mdp"
        android:text="@string/operator"

        app:layout_constraintStart_toEndOf="@id/user_img"
        app:layout_constraintTop_toBottomOf="@id/workspace" />

    <TextView
        android:id="@+id/operator_name"
        style="@style/toolbar_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_6mdp"
        app:layout_constraintStart_toEndOf="@id/operator"
        app:layout_constraintTop_toTopOf="@id/operator" />

    <TextView
        android:id="@+id/postpone_text_hh"
        style="@style/roboto_regular_14"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_20mdp"
        android:layout_marginTop="@dimen/_20mdp"
        android:text="@string/postponing_of_client"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/number_of_client"
        style="@style/roboto_bold_14"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_20mdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postpone_text_hh" />

    <View
        android:id="@+id/time"
        android:layout_width="@dimen/_200mdp"
        android:layout_height="@dimen/_28mdp"
        android:layout_marginTop="@dimen/_14mdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/number_of_client" />

    <TextView
        android:id="@+id/to_postpone_a"
        style="@style/roboto_regular_10_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8mdp"
        android:text="@string/to_postpone_a"
        app:layout_constraintBottom_toBottomOf="@id/time"
        app:layout_constraintStart_toStartOf="@id/time"
        app:layout_constraintTop_toTopOf="@id/time" />

    <TextView
        android:id="@+id/postponed_period"
        style="@style/roboto_bold_10_dark"
        android:layout_width="@dimen/_14mdp"
        android:layout_height="@dimen/_14mdp"
        android:layout_marginStart="@dimen/_4mdp"
        android:layout_marginTop="@dimen/_1mdp"
        android:textAlignment="center"
        android:text="@string/five"
        app:layout_constraintBottom_toBottomOf="@id/time"
        app:layout_constraintStart_toEndOf="@id/to_postpone_a"
        app:layout_constraintTop_toTopOf="@id/time" />

    <TextView
        style="@style/roboto_regular_10_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_36mdp"
        android:text="@string/minus"
        app:layout_constraintBottom_toBottomOf="@id/time"
        app:layout_constraintEnd_toStartOf="@id/minus"
        app:layout_constraintTop_toTopOf="@id/time" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/minus"
        android:layout_width="@dimen/_16mdp"
        android:layout_height="@dimen/_16mdp"
        android:layout_marginEnd="@dimen/_8mdp"
        android:background="@drawable/button_minus"
        android:src="@drawable/ic_minus"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/time"
        app:layout_constraintEnd_toStartOf="@id/plus"
        app:layout_constraintTop_toTopOf="@id/time" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/plus"
        android:layout_width="@dimen/_16mdp"
        android:layout_height="@dimen/_16mdp"
        android:layout_marginEnd="@dimen/_8mdp"
        android:background="@drawable/button_plus"
        android:src="@drawable/ic_plus"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/time"
        app:layout_constraintEnd_toEndOf="@id/time"
        app:layout_constraintTop_toTopOf="@id/time" />

    <EditText
        android:id="@+id/input_postponing_comment"
        style="@style/roboto_regular_10_light"
        android:layout_width="@dimen/_200mdp"
        android:layout_height="@dimen/_70mdp"
        android:layout_marginTop="@dimen/_10mdp"
        android:background="@drawable/input_img_for_comments"
        android:gravity="left"
        android:hint="@string/comments"
        android:maxLength="150"
        android:padding="@dimen/_8mdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time" />


    <TextView
        android:id="@+id/only_for_me_client_view"
        style="@style/roboto_regular_10"
        android:layout_width="@dimen/_200mdp"
        android:layout_height="@dimen/_28mdp"
        android:layout_marginTop="12dp"
        android:background="@drawable/input_img_for_comments"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/_8mdp"
        android:paddingEnd="@dimen/_7mdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_postponing_comment" />

    <CheckBox
        android:id="@+id/checkbox_only_for_me"
        style="@style/roboto_regular_10_dark"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_20mdp"
        android:layout_marginStart="@dimen/_8mdp"
        android:layout_marginEnd="@dimen/_8mdp"
        android:buttonTint="@color/green"
        android:text="@string/only_for_me"
        app:layout_constraintBottom_toBottomOf="@id/only_for_me_client_view"
        app:layout_constraintStart_toStartOf="@id/only_for_me_client_view"
        app:layout_constraintTop_toTopOf="@id/only_for_me_client_view" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_postponing"
        android:layout_width="@dimen/_240mdp"
        android:layout_height="@dimen/_56mdp"
        android:layout_marginBottom="@dimen/_10mdp"
        android:background="@drawable/green_button"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/to_postpone"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_12font_mdp"
        app:layout_constraintBottom_toTopOf="@id/button_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_cancel"
        style="@style/roboto_regular_14"
        android:layout_width="@dimen/_240mdp"
        android:layout_height="@dimen/_56mdp"
        android:layout_marginBottom="@dimen/_20mdp"
        android:background="@drawable/button_login"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textSize="@dimen/_12font_mdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
