<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- first case-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_call_next_client"
        android:layout_width="@dimen/_240mdp"
        android:layout_height="@dimen/_56mdp"
        android:layout_marginTop="@dimen/_10mdp"
        android:background="@drawable/green_button"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/to_call_next_client"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_12font_mdp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_list_postponed_clients"
        android:layout_width="@dimen/_240mdp"
        android:layout_height="@dimen/_56mdp"
        android:layout_marginTop="@dimen/_10mdp"
        android:background="@drawable/green_button"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/to_list_postponed_client"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_12font_mdp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_call_next_client" />
    <!-- _______________________________________-->

    <!-- second case-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_start_work"
        android:layout_width="@dimen/_240mdp"
        android:layout_height="@dimen/_56mdp"
        android:layout_marginTop="@dimen/_10mdp"
        android:background="@drawable/green_button"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/to_start_work"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_12font_mdp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_call_next_client_again"
        android:layout_width="@dimen/_240mdp"
        android:layout_height="@dimen/_56mdp"
        android:layout_marginTop="@dimen/_10mdp"
        android:background="@drawable/green_button"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/to_call_next_client_again"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_12font_mdp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_start_work" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_no_client"
        android:layout_width="@dimen/_240mdp"
        android:layout_height="@dimen/_56mdp"
        android:layout_marginTop="@dimen/_10mdp"
        android:background="@drawable/kill_next_customer_button"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/to_no_client"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_12font_mdp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_call_next_client_again" />
    <!-- _______________________________________-->


    <!-- third case-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_redirect"
        android:layout_width="@dimen/_240mdp"
        android:layout_height="@dimen/_56mdp"
        android:layout_marginTop="@dimen/_10mdp"
        android:background="@drawable/redirect_customer_button"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/to_redirect"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_12font_mdp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_postpone"
        android:layout_width="@dimen/_240mdp"
        android:layout_height="@dimen/_56mdp"
        android:layout_marginTop="@dimen/_10mdp"
        android:background="@drawable/postponed_customer_button"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/to_postpone"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_12font_mdp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_redirect" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_finish_work"
        android:layout_width="@dimen/_240mdp"
        android:layout_height="@dimen/_56mdp"
        android:layout_marginTop="@dimen/_10mdp"
        android:background="@drawable/green_button"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/to_finish_work"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_12font_mdp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_postpone" />

    <!-- _______________________________________-->


    <!-- one mode case-->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_call_next_client_one_mode"
        android:layout_width="@dimen/_240mdp"
        android:layout_height="@dimen/_56mdp"
        android:layout_marginTop="@dimen/_10mdp"
        android:background="@drawable/green_button"
        android:text="@string/to_call_next_client"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_call_next_client_again_one_mode"
        android:layout_width="@dimen/_240mdp"
        android:layout_height="@dimen/_56mdp"
        android:layout_marginTop="@dimen/_20mdp"
        android:background="@drawable/green_button"
        android:text="@string/to_call_next_client_again"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_call_next_client_one_mode" />

    <!-- _______________________________________-->
</androidx.constraintlayout.widget.ConstraintLayout>