<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50mdp"
        android:background="@drawable/bg_gradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/user_img"
        android:layout_width="@dimen/_36mdp"
        android:layout_height="@dimen/_36mdp"
        android:layout_marginStart="@dimen/_10mdp"
        android:layout_marginTop="@dimen/_8mdp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/ic_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/workspace"
        style="@style/toolbar_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_6mdp"
        android:layout_marginTop="@dimen/_10mdp"
        android:text="@string/workspace"
        app:layout_constraintStart_toEndOf="@id/user_img"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/workspace_number"
        style="@style/toolbar_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_6mdp"
        android:layout_marginTop="@dimen/_10mdp"
        app:layout_constraintStart_toEndOf="@id/workspace"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/operator"
        style="@style/toolbar_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_6mdp"
        android:text="@string/operator"
        app:layout_constraintStart_toEndOf="@id/user_img"
        app:layout_constraintTop_toBottomOf="@id/workspace" />

    <TextView
        android:id="@+id/operator_name"
        style="@style/toolbar_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_6mdp"
        app:layout_constraintStart_toEndOf="@id/operator"
        app:layout_constraintTop_toTopOf="@id/operator" />

    <TextView
        android:id="@+id/amount_of_clients"
        style="@style/roboto_regular_14"
        android:layout_width="@dimen/_238mdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_35font_mdp"
        android:layout_marginTop="@dimen/_14mdp"
        android:text="@string/amount_of_postponed_clients1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/postponed_client_list"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_15mdp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/button_invite_client"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount_of_clients"
        app:reverseLayout="false" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_invite_client"
        android:layout_width="@dimen/_200mdp"
        android:layout_height="@dimen/_28mdp"
        android:layout_marginTop="@dimen/_20mdp"
        android:layout_marginBottom="@dimen/_10mdp"
        android:background="@drawable/green_button"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/to_call_client"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_12font_mdp"
        app:layout_constraintBottom_toTopOf="@id/button_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_cancel"
        style="@style/roboto_regular_14"
        android:layout_width="@dimen/_200mdp"
        android:layout_height="@dimen/_28mdp"
        android:layout_marginBottom="@dimen/_20mdp"
        android:background="@drawable/button_login"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textSize="@dimen/_12font_mdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>